# task-management-api

./: .coverage  .env_dev  .gitignore  README.md  alembic.ini  database.db  pyproject.toml  requirements.txt  test.db
.github/workflows/: python-app.yml
app/: db.py  dependencies.py  env.py  exceptions.py  main.py  middlewares.py
app/config/: __init__.py  base.py  db.py  dev.py  prod.py  test.py
app/core/: __init__.py  cache_utils.py  db.py  dependencies.py  env.py  exceptions.py  redis.py
app/db/: __init__.py  db.py
app/db/models/: task_model.py
app/middlewares/: __init__.py  exceptions.py  request.py
app/repositories/: __init__.py  base_repository.py
app/repositories/in_memory_repository/: __init__.py  auth_in_memory_repository.py  task_in_memory_repository.py
app/repositories/sql_repository/: __init__.py  auth_sql_repository.py  task_sql_repository.py  tast_sql_repository.py
app/routers/: __init__.py  auth_router.py  base.py  errors.py  task_router.py
app/schemas/: __init__.py  task_schemas.py  token_schemas.py  user_schemas.py  user_task_relation_schemas.py
app/services/: __init__.py  auth_service.py  task_service.py
app/task_management_api/: env.py
app/task_management_api/versions/: 116dd361d744_initial.py  7b02dd96d9f5_added_user_activation.py  (+1 more)
app/templates/: base_email.html
app/utils/: __init__.py  alembic_utils.py  auth.py  email.py  envs.py  logging.py
src/: main.py
src/config/: settings.py
src/core/: __init__.py  database.py
src/models/: __init__.py  task.py
src/schemas/: __init__.py  task.py
src/services/: __init__.py  task_services.py
tests/: __init__.py  conftest.py  test_auth_repository.py  test_models.py  test_routes.py  test_schemas.py  test_services.py  test_task.py  test_task_repository.py
(+9 files in other folders)
